localConsensus finality implementation .. add simple test__driver to CMakeLists.txt

--- a/examples/stream-with-finality/CMakeLists.txt
+++ b/examples/stream-with-finality/CMakeLists.txt
@@ -7,3 +7,8 @@ if (WHISPER_SDL2)
 
     target_link_libraries(${TARGET} PRIVATE common common-sdl whisper ${CMAKE_THREAD_LIBS_INIT})
 endif ()
+
+set(CMAKE_CXX_STANDARD 17)
+
+# add_executable(test__overlapIndex test/test__overlapIndex.cpp overlapIndex.cpp)
+add_executable(test__driver test/test__driver.cpp driver.cpp overlapIndex.cpp localConsensusByN.cpp)
