printing localConsensus tokens

--- a/examples/stream-with-finality/CMakeLists.txt
+++ b/examples/stream-with-finality/CMakeLists.txt
@@ -1,7 +1,7 @@
 if (WHISPER_SDL2)
     # stream
     set(TARGET stream-with-finality)
-    add_executable(${TARGET} stream.cpp)
+    add_executable(${TARGET} stream.cpp driver.cpp overlapIndex.cpp localConsensusByN.cpp)
 
     include(DefaultTargetOptions)
 
