run on self-hosted runner

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -152,7 +152,7 @@ jobs:
             ctest -L gh --output-on-failure'
 
   windows:
-    runs-on: windows-latest
+    runs-on: self-hosted
 
     strategy:
       matrix:
